k8s/02-api-node-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-node-server-isr-svc
spec:
  selector:
    app: api-node-server-isr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
