k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: poc-isr-api.larturi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-node-server-isr-svc
            port:
              number: 80
